--- a/public/vote-page/vote-page.html
+++ b/public/vote-page/vote-page.html
@@ -3,37 +3,37 @@
   <head>
     <title>Auth0-jQuery</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="./stylesheets/reset.css">
-    <link rel="stylesheet" href="./stylesheets/vote-page.css">
     <link href="https://fonts.googleapis.com/css?family=Arsenal|Lato|Open+Sans" rel="stylesheet">
+    <link rel="stylesheet" href="/vote-page/stylesheets/reset.css">
+    <link rel="stylesheet" href="/vote-page/stylesheets/vote-page.css">
 
-
-    <!-- Auth0 lock script -->
     <script src="//cdn.auth0.com/js/lock/10.3.0/lock.min.js"></script>
+    <script src="/vote-page/scripts/auth0-variables.js"></script>
+    <script src="//code.jquery.com/jquery-3.1.0.min.js"></script>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
     <div class='auth-container'>
       <img alt="avatar" class="avatar" style="display:none;">
-      <p>Welcome <span class="nickname"></span></p>
+      <p class="welcome-title">Welcome <span class="nickname"></span></p>
       <button type="submit" class="btn-login">Sign In</button>
       <button type="submit" class="btn-logout" style="display:none;">Sign Out</button>
     </div>
 
-    <div id="connected-users-count">Connected Users:</div>
-    <div id="status-message">Status:</div>
+    <div class="live-update-feedback" id="connected-users-count">Connected Users:</div>
+    <div class="live-update-feedback" id="status-message">Status:</div>
 
     <div id="poll-container"></div>
     <div id="vote-feedback"></div>
 
-    <div id="poll-results-title"><h3>Poll Results:</h3>
-    <div id="vote-count"></div>
+    <divid="poll-results-title">
+      <h3 class="live-update-feedback" >Poll Results:</h3>
+      <div class="live-update-feedback" id="vote-count"></div>
+    </div>
 
-    <script src="//code.jquery.com/jquery-3.1.0.min.js"></script>
-    <script src="/scripts/auth0-variables.js"></script>
+    <script type="text/javascript" src="/vote-page/scripts/app.js"></script>
+    <script type="text/javascript" src="/vote-page/scripts/vote.js"></script>
     <script type="text/javascript" src="/socket.io/socket.io.js"></script>
-    <script type="text/javascript" src="/scripts/app.js"></script>
-    <script type="text/javascript" src="/scripts/vote.js"></script>
   </body>
 </html>
