--- a/public/vote-page/vote-page.html
+++ b/public/vote-page/vote-page.html
@@ -2,38 +2,39 @@
 <html>
   <head>
     <title>Auth0-jQuery</title>
-    <meta charset="utf-8">
-    <link href="https://fonts.googleapis.com/css?family=Arsenal|Lato|Open+Sans" rel="stylesheet">
-    <link rel="stylesheet" href="/vote-page/stylesheets/reset.css">
-    <link rel="stylesheet" href="/vote-page/stylesheets/vote-page.css">
+    <meta charset='utf-8'>
+    <link href='https://fonts.googleapis.com/css?family=Arsenal|Lato|Open+Sans' rel='stylesheet'>
+    <link rel='stylesheet' href='/vote-page/stylesheets/reset.css'>
+    <link rel='stylesheet' href='/vote-page/stylesheets/vote-page.css'>
 
-    <script src="//cdn.auth0.com/js/lock/10.3.0/lock.min.js"></script>
-    <script src="/vote-page/scripts/auth0-variables.js"></script>
-    <script src="//code.jquery.com/jquery-3.1.0.min.js"></script>
+    <script src='//cdn.auth0.com/js/lock/10.3.0/lock.min.js'></script>
+    <script src='/vote-page/scripts/auth0-variables.js'></script>
+    <script src='//code.jquery.com/jquery-3.1.0.min.js'></script>
 
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name='viewport' content='width=device-width, initial-scale=1'>
   </head>
   <body>
     <div class='auth-container'>
-      <img alt="avatar" class="avatar" style="display:none;">
-      <p class="welcome-title">Welcome <span class="nickname"></span></p>
-      <button type="submit" class="btn-login">Sign In</button>
-      <button type="submit" class="btn-logout" style="display:none;">Sign Out</button>
+      <img alt='avatar' class='avatar' style='display:none;'>
+      <p class='welcome-title'>Welcome <span class='nickname'></span></p>
+      <button type='submit' class='btn-home'>Home</button>
+      <button type='submit' class='btn-login'>Sign In</button>
+      <button type='submit' class='btn-logout' style='display:none;'>Sign Out</button>
     </div>
 
-    <div class="live-update-feedback" id="connected-users-count">Connected Users:</div>
-    <div class="live-update-feedback" id="status-message">Status:</div>
+    <div class='live-update-feedback' id='connected-users-count'>Connected Users:</div>
+    <div class='live-update-feedback' id='status-message'>Status:</div>
 
-    <div id="poll-container"></div>
-    <div id="vote-feedback"></div>
+    <div id='poll-container'></div>
+    <div id='vote-feedback'></div>
 
-    <divid="poll-results-title">
-      <h3 class="live-update-feedback" >Poll Results:</h3>
-      <div class="live-update-feedback" id="vote-count"></div>
+    <divid='poll-results-title'>
+      <h3 class='live-update-feedback' >Poll Results:</h3>
+      <div class='live-update-feedback' id='vote-count'></div>
     </div>
 
-    <script type="text/javascript" src="/vote-page/scripts/app.js"></script>
-    <script type="text/javascript" src="/vote-page/scripts/vote.js"></script>
-    <script type="text/javascript" src="/socket.io/socket.io.js"></script>
+    <script type='text/javascript' src='/vote-page/scripts/app.js'></script>
+    <script type='text/javascript' src='/vote-page/scripts/vote.js'></script>
+    <script type='text/javascript' src='/socket.io/socket.io.js'></script>
   </body>
 </html>
