Add styles to poll-form and render an app icon

--- a/public/create-poll.html
+++ b/public/create-poll.html
@@ -10,6 +10,7 @@
 
   <body>
     <h1 class='app-title'>Poll<span class='builder-span'>Builder</span></h1>
+    <img alt='poll-interface' id='poll-icon' src='/icons/interface.svg'/>
     <form id='poll-form' method='post'>
       <label class='poll-input-label question-label'>
         Create a Poll Question <br>
