--- a/public/vote-page/vote-page.html
+++ b/public/vote-page/vote-page.html
@@ -29,12 +29,13 @@
     <div id='vote-feedback'></div>
 
     <divid='poll-results-title'>
-      <h3 class='live-update-feedback' >Poll Results:</h3>
+      <h3 class='live-update-feedback' id="poll-results-text">Poll Results:</h3>
       <div class='live-update-feedback' id='vote-count'></div>
     </div>
 
     <script type='text/javascript' src='/vote-page/scripts/app.js'></script>
     <script type='text/javascript' src='/vote-page/scripts/vote.js'></script>
     <script type='text/javascript' src='/socket.io/socket.io.js'></script>
+    <script type='text/javascript' src='/vote-page/scripts/client-sockets.js'></script>
   </body>
 </html>
