--- a/public/vote-page/vote-page.html
+++ b/public/vote-page/vote-page.html
@@ -25,6 +25,8 @@
     <div class='live-update-feedback' id='connected-users-count'>Connected Users:</div>
     <div class='live-update-feedback' id='status-message'>Status:</div>
 
+    <img alt='poll-interface' id='poll-icon2' src='/icons/interface.svg'/>
+
     <div id='poll-container'></div>
     <div id='vote-feedback'></div>
 
