Refactor poll option buttons appending to page

--- a/public/create-poll.html
+++ b/public/create-poll.html
@@ -19,7 +19,7 @@
           id='poll-question'
           type='text'
           name='question'
-          placeholder='What would you like to know?'
+          placeholder='Ask Something...'
           title='Username should only contain lowercase letters. e.g. john'
         >
       </label>
