--- a/public/vote-page/vote-page.html
+++ b/public/vote-page/vote-page.html
@@ -27,12 +27,18 @@
 
     <img alt='poll-interface' id='poll-icon2' src='/icons/interface.svg'/>
 
-    <div id='poll-container'></div>
+    <div id='poll-question'></div>
+    <div class='options' id='poll-container'>
+      <div id='option1'></div>
+      <div id='option2'></div>
+      <div id='option3'></div>
+      <div id='option4'></div>
+    </div>
+    <div class="deadline-container"></div>
 
     <div id='vote-feedback'></div>
 
     <divid='poll-results-title'>
-      <h3 class='live-update-feedback' id="poll-results-text">Poll Results:</h3>
       <div class='live-update-feedback' id='vote-count'></div>
     </div>
 
