Fix time and date rendering; Add Media Queries

--- a/public/create-poll.html
+++ b/public/create-poll.html
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-    <h1 class='app-title'>Poll<span class='builder-span'>Builder</span></h1>
+    <h1 class='app-title'>Pollr<span class='builder-span'></span></h1>
     <img alt='poll-interface' id='poll-icon' src='/icons/interface.svg'/>
     <form id='poll-form' method='post'>
       <label class='poll-input-label question-label'>
