--- a/public/create-poll.html
+++ b/public/create-poll.html
@@ -20,16 +20,16 @@
           type='text'
           name='question'
           placeholder='Ask Something...'
-          title='Username should only contain lowercase letters. e.g. john'
+          title='Username should only contain letters, numbers, spaces, hyphens, exclamation/question marks, quotes, and periods.'
+          pattern='[a-zA-Z0-9 .!?"-]+$'
         >
       </label>
       <label class='poll-input-label options-container'>
         Select choices for your audience. <br>
-        <input class='input-field poll-option1' type='text' placeholder='Poll Response 1' title='Username should only contain lowercase letters. e.g. john'>
-        <input class='input-field poll-option2' type='text' placeholder='Poll Response 2' title='Username should only contain lowercase letters. e.g. john'>
-        <input class='input-field poll-option3' type='text' placeholder='Poll Response 3' title='Username should only contain lowercase letters. e.g. john'>
-        <input class='input-field poll-option4' id='bottom-option' type='text' placeholder='Poll Response 4' title='Username should only contain lowercase letters. e.g. john'>
-        <!--<input class='input-field poll-option' id='bottom-option' type='text' placeholder='Poll Response 4' pattern='^(?=.*[a-zA-Z\s\d].*)[a-zA-Z\d!@#$%&*]$' title='Username should only contain lowercase letters. e.g. john'>-->
+        <input class='input-field poll-option1' type='text' placeholder='Poll Response 1' pattern='[a-zA-Z0-9 .!?"-]+$' title='Poll Options should only contain letters, numbers, spaces, hyphens, exclamation marks, quotes, and periods.'>
+        <input class='input-field poll-option2' type='text' placeholder='Poll Response 2' pattern='[a-zA-Z0-9 .!?"-]+$' title='Poll Options should only contain letters, numbers, spaces, hyphens, exclamation marks, quotes, and periods.'>
+        <input class='input-field poll-option3' type='text' placeholder='Poll Response 3' pattern='[a-zA-Z0-9 .!?"-]+$' title='Poll Options should only contain letters, numbers, spaces, hyphens, exclamation marks, quotes, and periods.'>
+        <input class='input-field poll-option4' id='bottom-option' type='text' placeholder='Poll Response 4' pattern='[a-zA-Z0-9 .!?"-]+$' title='Poll Options should only contain letters, numbers, spaces, hyphens, exclamation marks, quotes, and periods.'>
       </label>
 
       <div class='deadline-container'>
